<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Check DCC</string>
    <string name="language_key">"en"</string>

    <string name="verifier_homescreen_header_title">EU DCC</string>
    <string name="verifier_homescreen_title">Check</string>
    <string name="verifier_homescreen_scan_button">Verify</string>
    <string name="verifier_homescreen_business_rules_button">Business Rules</string>

    <string name="verifier_homescreen_pager_description_1">Scan presented certificate</string>
    <string name="verifier_homescreen_pager_description_2">Certificates are verified automatically</string>

    <string name="verifier_title_qr_scan">Verify</string>
    <string name="verifier_title_settings">Settings</string>
    <string name="verifier_title_privacy_policy">Privacy policy</string>
    <string name="verifier_title_business_rules">Business rules</string>

    <string name="verifier_qr_scanner_scan_qr_text">Scan QR code to verify</string>
    <string name="verifier_qr_scanner_validate_with_country_rules">Choose country to verify against border business rules</string>
    <string name="verifier_qr_scanner_validate_with_national_rules">Verifying against domestic business rules</string>

    <string name="select_country_business_rules">Choose country to view business rules</string>
    <string name="rule_identifier">Identifier</string>
    <string name="rule_type">Type</string>
    <string name="rule_version">Version</string>
    <string name="rule_schema_version">Schema version</string>
    <string name="rule_engine">Engine</string>
    <string name="rule_engine_version">Engine version</string>
    <string name="rule_certificate_type">Certificate type</string>
    <string name="rule_description">Description</string>
    <string name="rule_valid_from">Valid from</string>
    <string name="rule_valid_to">Valid to</string>
    <string name="rule_region">Region</string>

    <string name="error_network_title">Network error</string>
    <string name="error_network_text">Check your internet connection.</string>
    <string name="error_action_retry">Try again</string>
    <string name="error_camera_permission_title">No access to camera</string>
    <string name="error_camera_permission_text">The app requires access to the camera to be able to scan the QR code.</string>
    <string name="error_action_change_settings">Change settings</string>
    <string name="error_title">Error</string>
    <string name="error_invalid_qr_text">Invalid code</string>
    <string name="error_backend_synchronization_text">The app requires at least one synchronization with the National Backend to be able to scan the QR code.</string>
    <string name="error_action_settings">Settings</string>
    <string name="error_action_ok">OK</string>

    <string name="app_update_ready">An update has just been downloaded.</string>
    <string name="app_update_confirm">Reload</string>

    <string name="camera_permission_dialog_text">The app requires access to the camera to be able to scan the QR code.</string>
    <string name="camera_permission_dialog_action">Allow access to camera</string>

    <string name="tab_certificate_details">Certificate</string>
    <string name="tab_business_rules_details">Business Rules</string>
    <string name="business_rules_domestic">Romania (domestic rules)</string>

    <string name="rule">Rule</string>
    <string name="result">Result</string>
    <string name="current">Current</string>
    <string name="passed">Passed</string>
    <string name="failed">Failed</string>
    <string name="open">Open</string>

    <string name="cert_valid">Verification successful</string>
    <string name="cert_invalid">Verification failed</string>
    <string name="test_certificate_legal_notice">The test certificate is valid in accordance with applicable law.</string>

    <string name="certificate_content_schema_not_valid">The certificate\'s content format is invalid (%1s).</string>
    <string name="certificate_cryptographic_signature_not_valid">The cryptographic signature is invalid (%1s).</string>
    <string name="certificate_cryptographic_signature_not_verifiable">The cryptographic signature could not be verified (%1s).</string>
    <string name="certificate_cryptographic_signature_expired">The cryptographic signature is expired.</string>

    <string name="certificate_vaccination_entry_date_in_future">The certificate\'s vaccination date is in the future.</string>
    <string name="certificate_test_entry_result_positive">The certificate\'s test result is positive.</string>
    <string name="certificate_test_entry_test_date_in_future">The certificate\'s test date is in the future.</string>
    <string name="certificate_recovery_entry_not_valid_so_far">The certificate\'s recovery statement is not valid yet.</string>
    <string name="certificate_recovery_entry_not_valid_anymore">The certificate\'s recovery statement is not valid anymore.</string>
    <string name="certificate_rules_validation_failed">The certificate\'s content does not pass the business rules.</string>

    <string name="type_test">Test</string>
    <string name="type_recovered">Rec</string>
    <string name="type_vaccination">Vac</string>

    <string name="standardised_family_name_title">Standardised Family Name</string>
    <string name="standardised_given_name_title">Standardised Given Name</string>
    <string name="date_of_birth_title">Date of Birth</string>

    <string name="person_full_name_placeholder">%1s %2s</string>

    <string name="entry_additional_details">Additional details</string>

    <string name="vaccine_entry_disease_title">Disease or agent targeted</string>
    <string name="vaccine_entry_vaccine_title">Vaccine/prophylaxis</string>
    <string name="vaccine_entry_vaccine_medicinal_product_title">Vaccine medicinal product</string>
    <string name="vaccine_entry_vaccine_marketing_authorisation_title">Vaccine marketing authorisation holder or manufacturer</string>
    <string name="vaccine_entry_number_in_a_series_overall_number_of_doses_title">Number in a series of vaccinations/doses and the overall number of doses in the series</string>
    <string name="vaccine_entry_date_of_vaccination_title">Date of vaccination</string>
    <string name="vaccine_entry_member_state_of_vaccination_title">Member State of vaccination</string>
    <string name="vaccine_entry_certificate_issuer_title">Certificate issuer</string>

    <string name="test_entry_disease_title">Disease or agent targeted</string>
    <string name="test_entry_type_of_test_title">Type of test</string>
    <string name="test_entry_test_name_title">Test name (optional for NAAT)</string>
    <string name="test_entry_test_manufacturer_title">Test manufacturer (optional for NAAT)</string>
    <string name="test_entry_date_sample_collection_title">Date and time of the test sample collection</string>
    <string name="test_entry_result_of_test_title">Result of the test</string>
    <string name="test_entry_testing_centre_title">Testing centre of facility</string>
    <string name="test_entry_member_state_of_test_title">Member State of test</string>
    <string name="test_entry_certificate_issuer_title">Certificate issuer</string>

    <string name="recovery_entry_disease_title">Disease or agent targeted</string>
    <string name="recovery_entry_date_of_first_positive_test_title">Date of first positive test result</string>
    <string name="recovery_entry_member_state_of_test_title">Member State of test</string>
    <string name="recovery_entry_certificate_issuer_title">Certificate issuer</string>
    <string name="recovery_entry_certificate_valid_from_title">Certificate valid from</string>
    <string name="recovery_entry_certificate_valid_until_title">Certificate valid until (not more than 180 days after the date of first positive test result)</string>

    <string name="entry_technical_details">Technical details</string>
    <string name="entry_schema_version_title">Schema version</string>
    <string name="entry_issuer_country_title">Issuer (iss)</string>
    <string name="entry_issued_at_title">Hcert issued at (iat)</string>
    <string name="entry_expires_at_title">Hcert expires at (exp)</string>
    <string name="entry_dsc_valid_from_title">DSC valid from</string>
    <string name="entry_dsc_valid_to_title">DSC valid to</string>
    <string name="entry_certificate_id_title">Unique certificate identifier</string>

    <string name="done">Done</string>
    <string name="retry">Retry</string>

    <string name="options">Options</string>
    <string name="preferences_language">Language</string>
    <string name="preferences_about">About</string>
    <string name="preferences_data_protection">Privacy policy and terms of use</string>
    <string name="preferences_sync_public_keys">Synchronize with the National Backend</string>
    <string name="preferences_version">Version</string>
    <string name="last_updated">Last Updated: %s</string>
</resources>