<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recycler_view_certificate_entries"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:background="@color/white">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/target_title"
        style="@style/Dgc.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/vaccine_entry_disease_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/target_value"
        style="@style/Dgc.Text.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="COVID-19" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/vaccine_title"
        style="@style/Dgc.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/vaccine_entry_vaccine_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/vaccine_value"
        style="@style/Dgc.Text.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="SARS-CoV-2-mRNA vaccine" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/vaccine_medicinal_product_title"
        style="@style/Dgc.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/vaccine_entry_vaccine_medicinal_product_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/vaccine_medicinal_product_value"
        style="@style/Dgc.Text.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Comirnaty" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/vaccine_marketing_authorization_title"
        style="@style/Dgc.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/vaccine_entry_vaccine_marketing_authorisation_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/vaccine_marketing_authorization_value"
        style="@style/Dgc.Text.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Biontech Manufacturing GmbH" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/date_title"
        style="@style/Dgc.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/vaccine_entry_date_of_vaccination_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/date_value"
        style="@style/Dgc.Text.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Feb 26, 1998" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/vaccine_number_overall_doses_title"
        style="@style/Dgc.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/vaccine_entry_number_in_a_series_overall_number_of_doses_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/vaccine_number_overall_doses_value"
        style="@style/Dgc.Text.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="2 / 2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/country_title"
        style="@style/Dgc.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/vaccine_entry_member_state_of_vaccination_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/country_value"
        style="@style/Dgc.Text.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Romania" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/certificate_issuer_title"
        style="@style/Dgc.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/vaccine_entry_certificate_issuer_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/certificate_issuer_value"
        style="@style/Dgc.Text.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Ministry of Health" />

</LinearLayout>