<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recycler_view_certificate_entries"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:background="@color/white">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/target_title"
        style="@style/Dgc.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/recovery_entry_disease_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/target_value"
        style="@style/Dgc.Text.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="COVID-19" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/date_of_first_positive_title"
        style="@style/Dgc.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/recovery_entry_date_of_first_positive_test_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/date_of_first_positive_value"
        style="@style/Dgc.Text.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Jan 12, 1989" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/country_title"
        style="@style/Dgc.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/recovery_entry_member_state_of_test_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/country_value"
        style="@style/Dgc.Text.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Romania" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/certificate_issuer_title"
        style="@style/Dgc.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/recovery_entry_certificate_issuer_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/certificate_issuer_value"
        style="@style/Dgc.Text.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Ministry of Health" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/certificate_valid_from_title"
        style="@style/Dgc.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/recovery_entry_certificate_valid_from_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/certificate_valid_from_value"
        style="@style/Dgc.Text.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Feb 26, 1998" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/certificate_valid_until_title"
        style="@style/Dgc.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/recovery_entry_certificate_valid_until_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/certificate_valid_until_value"
        style="@style/Dgc.Text.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Feb 26, 1998" />


</LinearLayout>